fix toolbar drawer collapse issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "DFPHeiBold-B5";
+  font-weight: 400;
+  font-style: normal;
+  src: local("DFPHeiBold-B5"), url("DFPHeiBold-B5.ttf") format("opentype");
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -26,7 +33,6 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden;
-
 }
 
 a {
